@@ -1,3 +1,5 @@
+* Dialer: set CALLERID(num) in OriginateResponse handler in order to ensure the
+  CDR has a meaningful source field value. Fixes Elastix bug #1411.
 * Trunks Used per Hour: core query method rewritten to use SQL parameters. SQL
   was reimplemented to use more efficient grouping. HTML formatting moved to 
   index.php. Trunk filter now allows report on calls from all trunks.
